tests/errors/flow/else-if-no-final-else.fn
---
Description: if/else if chain without a final else cannot guarantee return
Expected: FN4001
---

type Program
{
    static fn Bad(a: bool, b: bool) -> i32
    {
        if a
        {
            return 1
        }
        else if b
        {
            return 2
        }
    }

    static fn Main -> i32
    {
        return Bad(false, false)
    }
}
